tests/integration/snapshots/integration__conformance__n_structure_single_star.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
*
stdout --- 
<empty>
stderr --- 
error: unexpected character `*`. expected start of a json value
 --> stdin:1:1
  |
1 | *
  | ^
